--- a/t/test/apache-rewriterules-rewrite.conf
+++ b/t/test/apache-rewriterules-rewrite.conf
@@ -14,3 +14,5 @@ SetEnvIf Cookie "^(.*)$" AllCookies=$1
 RewriteRule ^/bcookie http://%{ENV:BackendFoo}/%{ENV:AllCookies} [P,L]
 SetEnvIf X-ABC "^(.*)$" XAbcValue=$1
 RewriteRule ^/bxabc http://%{ENV:BackendFoo}/%{ENV:XAbcValue} [P,L]
+
+RewriteRule ^/status/403 - [F,L]
